# Bmp1bppScale

./: CMakeLists.txt  README.md  bmp.cpp  bmp.h  bmpdemo_1.cpp  bmpdemo_2.cpp  bmpdemo_3.cpp  bmputil.cpp  bmputil.h
